adapted for spring boot 2.X and Java 8